--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
-html {
-  transition: background-color 0.3s, color 0.3s;
+@theme {
+  --color-primary: #FFFFFF;
+  --color-primary-dark: #000000;
 }
+
